@@ -1,3 +1,5 @@
+* Calls per hour, Graphics Calls per hour: transpose the rows and columns of the
+  report so that the report is thinner. Fixes Elastix bug #1494.
 * Campaign Monitoring: place incoming queue calls as the last items in the 
   drop-down list.
 * Campaign Monitoring: append available campaigns to report list instead of 
